Prepare Quest APK Renamer 1.9.0 beta 1